parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> statement
Rule 2     programa -> empty
Rule 3     empty -> <empty>
Rule 4     statement -> content PUNTO_Y_COMA
Rule 5     statement -> content PUNTO_Y_COMA statement
Rule 6     statement -> no_semicolon
Rule 7     statement -> no_semicolon statement
Rule 8     content -> define
Rule 9     content -> declare
Rule 10    content -> assign
Rule 11    no_semicolon -> condition
Rule 12    no_semicolon -> loop
Rule 13    no_semicolon -> function_def
Rule 14    ident -> CADENA_NO_COMILLAS
Rule 15    ident -> CADENA_NO_COMILLAS PUNTO ident
Rule 16    ident -> CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
Rule 17    ident -> CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident
Rule 18    declare -> LET id
Rule 19    id -> variable
Rule 20    id -> variable COMA id
Rule 21    id -> variable ASIGNACION valor
Rule 22    id -> variable ASIGNACION valor COMA id
Rule 23    variable -> ident
Rule 24    variable -> ident DOS_PUNTOS tipo
Rule 25    assign -> ident ASIGNACION valor
Rule 26    valor -> ident
Rule 27    valor -> ENTERO
Rule 28    valor -> DECIMAL
Rule 29    valor -> operacion
Rule 30    valor -> TR
Rule 31    valor -> FL
Rule 32    valor -> NULL
Rule 33    valor -> ajson_v
Rule 34    valor -> CARACTER
Rule 35    valor -> function_call
Rule 36    valor -> PARENTESIS_ABRE valor PARENTESIS_CIERRA
Rule 37    valor -> SUMA valor
Rule 38    valor -> RESTA valor
Rule 39    define -> TYPE CADENA_NO_COMILLAS ASIGNACION ajson
Rule 40    ajson -> LLAVE_ABRE lista LLAVE_CIERRA
Rule 41    lista -> elemento
Rule 42    lista -> elemento COMA
Rule 43    lista -> elemento COMA lista
Rule 44    elemento -> clave DOS_PUNTOS valor_t
Rule 45    valor_t -> tipo
Rule 46    valor_t -> ajson
Rule 47    clave -> CADENA_NO_COMILLAS
Rule 48    clave -> CADENA_COMILLAS
Rule 49    ajson_v -> LLAVE_ABRE lista_v LLAVE_CIERRA
Rule 50    lista_v -> elemento_v
Rule 51    lista_v -> elemento_v COMA
Rule 52    lista_v -> elemento_v COMA lista_v
Rule 53    elemento_v -> clave_v DOS_PUNTOS valor
Rule 54    clave_v -> CADENA_NO_COMILLAS
Rule 55    clave_v -> CADENA_COMILLAS
Rule 56    operacion -> aritmetica
Rule 57    operacion -> booleana
Rule 58    operacion -> comparacion
Rule 59    aritmetica -> valor SUMA valor
Rule 60    aritmetica -> valor RESTA valor
Rule 61    aritmetica -> valor MULTIPLICACION valor
Rule 62    aritmetica -> valor DIVISION valor
Rule 63    comparacion -> valor MAYOR valor
Rule 64    comparacion -> valor MENOR valor
Rule 65    comparacion -> valor MAYOR_IGUAL valor
Rule 66    comparacion -> valor MENOR_IGUAL valor
Rule 67    comparacion -> valor IGUAL valor
Rule 68    booleana -> valor CONJUNCION valor
Rule 69    booleana -> valor DISYUNCION valor
Rule 70    booleana -> NEGACION valor
Rule 71    tipo -> INT
Rule 72    tipo -> FLOAT
Rule 73    tipo -> CHARACTER
Rule 74    tipo -> BOOLEAN
Rule 75    tipo -> CADENA_NO_COMILLAS
Rule 76    condition -> IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
Rule 77    condition -> IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA ELSE LLAVE_ABRE statement LLAVE_CIERRA
Rule 78    loop -> WHILE PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
Rule 79    function_def -> FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
Rule 80    function_def -> FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
Rule 81    function_def -> FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
Rule 82    function_def -> FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
Rule 83    function_call -> CADENA_NO_COMILLAS PARENTESIS_ABRE arg PARENTESIS_CIERRA
Rule 84    function_call -> CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA
Rule 85    arg -> valor
Rule 86    arg -> valor COMA arg

Terminals, with rules where they appear

ASIGNACION           : 21 22 25 39
BOOLEAN              : 74
CADENA_COMILLAS      : 16 17 48 55
CADENA_NO_COMILLAS   : 14 15 16 17 39 47 54 75 79 80 81 82 83 84
CARACTER             : 34
CHARACTER            : 73
COMA                 : 20 22 42 43 51 52 86
CONJUNCION           : 68
CORCHETE_ABRE        : 16 17
CORCHETE_CIERRA      : 16 17
DECIMAL              : 28
DISYUNCION           : 69
DIVISION             : 62
DOS_PUNTOS           : 24 44 53 79 80 81 82
ELSE                 : 77
ENTERO               : 27
FL                   : 31
FLOAT                : 72
FUNCTION             : 79 80 81 82
IF                   : 76 77
IGUAL                : 67
INT                  : 71
LET                  : 18
LLAVE_ABRE           : 40 49 76 77 77 78 79 80 81 82
LLAVE_CIERRA         : 40 49 76 77 77 78 79 80 81 82
MAYOR                : 63
MAYOR_IGUAL          : 65
MENOR                : 64
MENOR_IGUAL          : 66
MULTIPLICACION       : 61
NEGACION             : 70
NULL                 : 32
PARENTESIS_ABRE      : 36 76 77 78 79 80 81 82 83 84
PARENTESIS_CIERRA    : 36 76 77 78 79 80 81 82 83 84
PUNTO                : 15 17
PUNTO_Y_COMA         : 4 5 79 80 81 82
RESTA                : 38 60
RETURN               : 79 80 81 82
SUMA                 : 37 59
TR                   : 30
TYPE                 : 39
WHILE                : 78
error                : 

Nonterminals, with rules where they appear

ajson                : 39 46
ajson_v              : 33
arg                  : 83 86
aritmetica           : 56
assign               : 10
booleana             : 57
clave                : 44
clave_v              : 53
comparacion          : 58
condition            : 11
content              : 4 5
declare              : 9
define               : 8
elemento             : 41 42 43
elemento_v           : 50 51 52
empty                : 2
function_call        : 35
function_def         : 13
id                   : 18 20 22 79 80
ident                : 15 17 23 24 25 26
lista                : 40 43
lista_v              : 49 52
loop                 : 12
no_semicolon         : 6 7
operacion            : 29
programa             : 0
statement            : 1 5 7 76 77 77 78 79 81
tipo                 : 24 45 79 80 81 82
valor                : 21 22 25 36 37 38 53 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 76 77 78 79 80 81 82 85 86
valor_t              : 44
variable             : 19 20 21 22

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . statement
    (2) programa -> . empty
    (4) statement -> . content PUNTO_Y_COMA
    (5) statement -> . content PUNTO_Y_COMA statement
    (6) statement -> . no_semicolon
    (7) statement -> . no_semicolon statement
    (3) empty -> .
    (8) content -> . define
    (9) content -> . declare
    (10) content -> . assign
    (11) no_semicolon -> . condition
    (12) no_semicolon -> . loop
    (13) no_semicolon -> . function_def
    (39) define -> . TYPE CADENA_NO_COMILLAS ASIGNACION ajson
    (18) declare -> . LET id
    (25) assign -> . ident ASIGNACION valor
    (76) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (77) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA ELSE LLAVE_ABRE statement LLAVE_CIERRA
    (78) loop -> . WHILE PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (79) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (80) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (81) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (82) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (14) ident -> . CADENA_NO_COMILLAS
    (15) ident -> . CADENA_NO_COMILLAS PUNTO ident
    (16) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    $end            reduce using rule 3 (empty -> .)
    TYPE            shift and go to state 12
    LET             shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    CADENA_NO_COMILLAS shift and go to state 13

    programa                       shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    content                        shift and go to state 4
    no_semicolon                   shift and go to state 5
    define                         shift and go to state 6
    declare                        shift and go to state 7
    assign                         shift and go to state 8
    condition                      shift and go to state 9
    loop                           shift and go to state 10
    function_def                   shift and go to state 11
    ident                          shift and go to state 15

state 1

    (0) S' -> programa .



state 2

    (1) programa -> statement .

    $end            reduce using rule 1 (programa -> statement .)


state 3

    (2) programa -> empty .

    $end            reduce using rule 2 (programa -> empty .)


state 4

    (4) statement -> content . PUNTO_Y_COMA
    (5) statement -> content . PUNTO_Y_COMA statement

    PUNTO_Y_COMA    shift and go to state 19


state 5

    (6) statement -> no_semicolon .
    (7) statement -> no_semicolon . statement
    (4) statement -> . content PUNTO_Y_COMA
    (5) statement -> . content PUNTO_Y_COMA statement
    (6) statement -> . no_semicolon
    (7) statement -> . no_semicolon statement
    (8) content -> . define
    (9) content -> . declare
    (10) content -> . assign
    (11) no_semicolon -> . condition
    (12) no_semicolon -> . loop
    (13) no_semicolon -> . function_def
    (39) define -> . TYPE CADENA_NO_COMILLAS ASIGNACION ajson
    (18) declare -> . LET id
    (25) assign -> . ident ASIGNACION valor
    (76) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (77) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA ELSE LLAVE_ABRE statement LLAVE_CIERRA
    (78) loop -> . WHILE PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (79) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (80) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (81) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (82) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (14) ident -> . CADENA_NO_COMILLAS
    (15) ident -> . CADENA_NO_COMILLAS PUNTO ident
    (16) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    $end            reduce using rule 6 (statement -> no_semicolon .)
    LLAVE_CIERRA    reduce using rule 6 (statement -> no_semicolon .)
    RETURN          reduce using rule 6 (statement -> no_semicolon .)
    TYPE            shift and go to state 12
    LET             shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    CADENA_NO_COMILLAS shift and go to state 13

    no_semicolon                   shift and go to state 5
    statement                      shift and go to state 20
    content                        shift and go to state 4
    define                         shift and go to state 6
    declare                        shift and go to state 7
    assign                         shift and go to state 8
    condition                      shift and go to state 9
    loop                           shift and go to state 10
    function_def                   shift and go to state 11
    ident                          shift and go to state 15

state 6

    (8) content -> define .

    PUNTO_Y_COMA    reduce using rule 8 (content -> define .)


state 7

    (9) content -> declare .

    PUNTO_Y_COMA    reduce using rule 9 (content -> declare .)


state 8

    (10) content -> assign .

    PUNTO_Y_COMA    reduce using rule 10 (content -> assign .)


state 9

    (11) no_semicolon -> condition .

    TYPE            reduce using rule 11 (no_semicolon -> condition .)
    LET             reduce using rule 11 (no_semicolon -> condition .)
    IF              reduce using rule 11 (no_semicolon -> condition .)
    WHILE           reduce using rule 11 (no_semicolon -> condition .)
    FUNCTION        reduce using rule 11 (no_semicolon -> condition .)
    CADENA_NO_COMILLAS reduce using rule 11 (no_semicolon -> condition .)
    $end            reduce using rule 11 (no_semicolon -> condition .)
    LLAVE_CIERRA    reduce using rule 11 (no_semicolon -> condition .)
    RETURN          reduce using rule 11 (no_semicolon -> condition .)


state 10

    (12) no_semicolon -> loop .

    TYPE            reduce using rule 12 (no_semicolon -> loop .)
    LET             reduce using rule 12 (no_semicolon -> loop .)
    IF              reduce using rule 12 (no_semicolon -> loop .)
    WHILE           reduce using rule 12 (no_semicolon -> loop .)
    FUNCTION        reduce using rule 12 (no_semicolon -> loop .)
    CADENA_NO_COMILLAS reduce using rule 12 (no_semicolon -> loop .)
    $end            reduce using rule 12 (no_semicolon -> loop .)
    LLAVE_CIERRA    reduce using rule 12 (no_semicolon -> loop .)
    RETURN          reduce using rule 12 (no_semicolon -> loop .)


state 11

    (13) no_semicolon -> function_def .

    TYPE            reduce using rule 13 (no_semicolon -> function_def .)
    LET             reduce using rule 13 (no_semicolon -> function_def .)
    IF              reduce using rule 13 (no_semicolon -> function_def .)
    WHILE           reduce using rule 13 (no_semicolon -> function_def .)
    FUNCTION        reduce using rule 13 (no_semicolon -> function_def .)
    CADENA_NO_COMILLAS reduce using rule 13 (no_semicolon -> function_def .)
    $end            reduce using rule 13 (no_semicolon -> function_def .)
    LLAVE_CIERRA    reduce using rule 13 (no_semicolon -> function_def .)
    RETURN          reduce using rule 13 (no_semicolon -> function_def .)


state 12

    (39) define -> TYPE . CADENA_NO_COMILLAS ASIGNACION ajson

    CADENA_NO_COMILLAS shift and go to state 21


state 13

    (14) ident -> CADENA_NO_COMILLAS .
    (15) ident -> CADENA_NO_COMILLAS . PUNTO ident
    (16) ident -> CADENA_NO_COMILLAS . CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> CADENA_NO_COMILLAS . CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    ASIGNACION      reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    DOS_PUNTOS      reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    COMA            reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    PUNTO_Y_COMA    reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    SUMA            reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    RESTA           reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    MULTIPLICACION  reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    DIVISION        reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    CONJUNCION      reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    DISYUNCION      reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    MAYOR           reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    MENOR           reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    MAYOR_IGUAL     reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    MENOR_IGUAL     reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    IGUAL           reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    PARENTESIS_CIERRA reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    LLAVE_CIERRA    reduce using rule 14 (ident -> CADENA_NO_COMILLAS .)
    PUNTO           shift and go to state 22
    CORCHETE_ABRE   shift and go to state 23


state 14

    (18) declare -> LET . id
    (19) id -> . variable
    (20) id -> . variable COMA id
    (21) id -> . variable ASIGNACION valor
    (22) id -> . variable ASIGNACION valor COMA id
    (23) variable -> . ident
    (24) variable -> . ident DOS_PUNTOS tipo
    (14) ident -> . CADENA_NO_COMILLAS
    (15) ident -> . CADENA_NO_COMILLAS PUNTO ident
    (16) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    CADENA_NO_COMILLAS shift and go to state 13

    id                             shift and go to state 24
    variable                       shift and go to state 25
    ident                          shift and go to state 26

state 15

    (25) assign -> ident . ASIGNACION valor

    ASIGNACION      shift and go to state 27


state 16

    (76) condition -> IF . PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (77) condition -> IF . PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA ELSE LLAVE_ABRE statement LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 28


state 17

    (78) loop -> WHILE . PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA

    PARENTESIS_ABRE shift and go to state 29


state 18

    (79) function_def -> FUNCTION . CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (80) function_def -> FUNCTION . CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (81) function_def -> FUNCTION . CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (82) function_def -> FUNCTION . CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA

    CADENA_NO_COMILLAS shift and go to state 30


state 19

    (4) statement -> content PUNTO_Y_COMA .
    (5) statement -> content PUNTO_Y_COMA . statement
    (4) statement -> . content PUNTO_Y_COMA
    (5) statement -> . content PUNTO_Y_COMA statement
    (6) statement -> . no_semicolon
    (7) statement -> . no_semicolon statement
    (8) content -> . define
    (9) content -> . declare
    (10) content -> . assign
    (11) no_semicolon -> . condition
    (12) no_semicolon -> . loop
    (13) no_semicolon -> . function_def
    (39) define -> . TYPE CADENA_NO_COMILLAS ASIGNACION ajson
    (18) declare -> . LET id
    (25) assign -> . ident ASIGNACION valor
    (76) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (77) condition -> . IF PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA ELSE LLAVE_ABRE statement LLAVE_CIERRA
    (78) loop -> . WHILE PARENTESIS_ABRE valor PARENTESIS_CIERRA LLAVE_ABRE statement LLAVE_CIERRA
    (79) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (80) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE id PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (81) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE statement RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (82) function_def -> . FUNCTION CADENA_NO_COMILLAS PARENTESIS_ABRE PARENTESIS_CIERRA DOS_PUNTOS tipo LLAVE_ABRE RETURN valor PUNTO_Y_COMA LLAVE_CIERRA
    (14) ident -> . CADENA_NO_COMILLAS
    (15) ident -> . CADENA_NO_COMILLAS PUNTO ident
    (16) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    $end            reduce using rule 4 (statement -> content PUNTO_Y_COMA .)
    LLAVE_CIERRA    reduce using rule 4 (statement -> content PUNTO_Y_COMA .)
    RETURN          reduce using rule 4 (statement -> content PUNTO_Y_COMA .)
    TYPE            shift and go to state 12
    LET             shift and go to state 14
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FUNCTION        shift and go to state 18
    CADENA_NO_COMILLAS shift and go to state 13

    content                        shift and go to state 4
    statement                      shift and go to state 31
    no_semicolon                   shift and go to state 5
    define                         shift and go to state 6
    declare                        shift and go to state 7
    assign                         shift and go to state 8
    condition                      shift and go to state 9
    loop                           shift and go to state 10
    function_def                   shift and go to state 11
    ident                          shift and go to state 15

state 20

    (7) statement -> no_semicolon statement .

    $end            reduce using rule 7 (statement -> no_semicolon statement .)
    LLAVE_CIERRA    reduce using rule 7 (statement -> no_semicolon statement .)
    RETURN          reduce using rule 7 (statement -> no_semicolon statement .)


state 21

    (39) define -> TYPE CADENA_NO_COMILLAS . ASIGNACION ajson

    ASIGNACION      shift and go to state 32


state 22

    (15) ident -> CADENA_NO_COMILLAS PUNTO . ident
    (14) ident -> . CADENA_NO_COMILLAS
    (15) ident -> . CADENA_NO_COMILLAS PUNTO ident
    (16) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> . CADENA_NO_COMILLAS CORCHETE_ABRE CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    CADENA_NO_COMILLAS shift and go to state 13

    ident                          shift and go to state 33

state 23

    (16) ident -> CADENA_NO_COMILLAS CORCHETE_ABRE . CADENA_COMILLAS CORCHETE_CIERRA
    (17) ident -> CADENA_NO_COMILLAS CORCHETE_ABRE . CADENA_COMILLAS CORCHETE_CIERRA PUNTO ident

    CADENA_COMILLAS shift and go to state 34


state 24

    (18) declare -> LET id .

    PUNTO_Y_COMA    reduce using rule 18 (declare -> LET id .)


state 25

    (19) id -> variable .
    (20) id -> variable . COMA id
    (21) id -> variable . ASIGNACION valor
    (22) id -> variable . ASIGNACION valor COMA id
